--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,26 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="description">Description</string>
+    <string name="enter_qty">Enter Qty</string>
+    <string name="address">Address</string>
+    <string name="landmark">landmark</string>
+    <string name="city">city</string>
+    <string name="state">state</string>
+    <string name="zip_code">zip code</string>
+    <string name="save_address">save address</string>
+    <string name="country">Country</string>
+
+    <string-array name="quatity_dropdown">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+
+
+    </string-array>
 </resources>
